src/components/calendar/CursorText/index.module.scss
.controls {
  display: inline-flex;

  button:not(:last-of-type) {
    margin-right: var(--button-spacing);
  }
}

.container {
  --button-spacing: 4px;

  align-items: center;
  display: flex;
  white-space: nowrap;

  &.left {
    flex-direction: row-reverse;
    justify-content: start;
  }

  &.right {
    flex-direction: row;
    justify-content: space-between;
  }

  &.left .controls {
    margin-right: calc(2 * var(--button-spacing));
  }

  &.right .controls {
    margin-left: calc(2 * var(--button-spacing));
  }
}

.track {
  display: inline-grid;

  > * {
    grid-column: 1;
    grid-row: 1;
  }
}

.badge {
  margin-left: 8px;
}

